--- a/src/components/google-maps/google-maps.scss
+++ b/src/components/google-maps/google-maps.scss
@@ -1,5 +1,5 @@
 
-google-maps {display: block; width: 100%; height: 100%; position: fixed; top: 0;}
+google-maps {display: block; width: 100%; height: 100%; position: fixed !important; top: 0;}
 
 .gm-style-mtc {display: none;}
 .gm-style > button {display: none;}
